[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/Projectiles/Entities/enproj3.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite276_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite276_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite276_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite276_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite277_5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite277_4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite277_3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite277_2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite277_1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite277_0.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Mobs/BigSoldier/psprite277_0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Mobs/BigSoldier/psprite277_1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Mobs/BigSoldier/psprite277_2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Mobs/BigSoldier/psprite276_0.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Mobs/BigSoldier/psprite276_1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Mobs/BigSoldier/psprite276_2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Mobs/BigSoldier/psprite276_3.png" type="Texture" id=18]
[ext_resource path="res://Sons/Attsolboule.wav" type="AudioStream" id=19]
[ext_resource path="res://Sons/Attsolbouleend.wav" type="AudioStream" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "send",
"speed": 15.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "pexplode",
"speed": 15.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "pdefault",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "psend",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.68183

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/image.axd.png-c6dfa6ae2764dc24b10c5e93f25bdcf4.stex"

[sub_resource type="CircleShape2D" id=4]
radius = 8.16649

[node name="projen1" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="veg" type="CollisionShape2D" parent="."]
position = Vector2( 0.0267747, 0.056822 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0.0848842, -0.0920169 )
scale = Vector2( 0.0545753, 0.0516472 )
texture = SubResource( 3 )
color = Color( 0.14902, 1, 0, 1 )
energy = 1.04

[node name="Timer" type="Timer" parent="."]

[node name="boulpos" type="Position2D" parent="."]
position = Vector2( 0.0417964, 0.0117511 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )

[node name="SoundHit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
